Remove vendor source trees; manage DS/ST via bundled official runtime packages.
Drop integration-seatunnel and DS submodule from the repo, install official releases under runtime/ on startup, and add Runtime UI/API for version install and switch.

Co-authored-by: Cursor <cursoragent@cursor.com>